better footer + quote carousel

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Contact - OmegaT</title>
+  <title>Contact et Assistance - OmegaT</title>
   
   <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
   
@@ -91,7 +91,7 @@
     </nav>
 
 
-    <div class="jumbotron jumbo-page titles-contact"><h1>Contact</h1></div>
+    <div class="jumbotron jumbo-page titles-contact"><h1>Contact et Assistance</h1></div>
         
     <?xml version="1.0"?>
 <div class="container">
@@ -177,12 +177,23 @@ and/or mailing lists.</p>
           </li>
         </ul>
       </div>
-      <div class="col-sm-8"><!-- padding --></div>
+      <div class="col-sm-2 footer-column">
+        <h4>Documentation</h4>
+        <ul>
+          <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
+          <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
+          <li><a href="howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
+          <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Articles</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
+              <div class="col-sm-2 footer-column"><!-- --></div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
         <ul>
           <li>
-          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact</a>
+          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact et Assistance</a>
           </li>
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
