--- a/fr/download.html
+++ b/fr/download.html
@@ -126,9 +126,9 @@ date. It will however lack some of the features of the "Latest" version.</p>
   </tr>
 
   <tr id="standard_windows_nojre">
-      <td class="version-name">Windows without JRE</td>
+      <td class="version-name">Windows sans JRE</td>
       <td>
-          <span rel="popover" data-platform="windows_nojre" data-title="Windows without JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
+          <span rel="popover" data-platform="windows_nojre" data-title="Windows sans JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
           <div id="info_windows_nojre"/>
       </td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Windows_without_JRE.exe/download" role="button">Download</a></td>
@@ -153,27 +153,27 @@ date. It will however lack some of the features of the "Latest" version.</p>
   </tr>
 
   <tr id="standard_linux_jre">
-      <td class="version-name">Linux with JRE</td>
+      <td class="version-name">Linux avec JRE 32 bits</td>
       <td>
-          <span rel="popover" data-platform="linux_jre" data-title="Linux with JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
+          <span rel="popover" data-platform="linux_jre" data-title="Linux avec JRE 32 bits" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
           <div id="info_linux_jre"/>
       </td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Linux.tar.bz2/download" role="button">Download</a></td>
   </tr>
 
   <tr id="standard_linux_jre64b">
-      <td class="version-name">Linux with 64-bit JRE</td>
+      <td class="version-name">Linux avec JRE 64 bits</td>
       <td>
-          <span rel="popover" data-platform="linux_jre64b" data-title="Linux with 64-bit JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
+          <span rel="popover" data-platform="linux_jre64b" data-title="Linux avec JRE 64 bits" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
           <div id="info_linux_jre64b"/>
       </td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Linux_64.tar.bz2/download" role="button">Download</a></td>
   </tr>
 
   <tr id="standard_linux_nojre">
-      <td class="version-name">Cross-platform without JRE</td>
+      <td class="version-name">Cross-platform sans JRE</td>
       <td>
-          <span rel="popover" data-platform="nojre" data-title="Cross-platform without JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
+          <span rel="popover" data-platform="nojre" data-title="Cross-platform sans JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span>
           <div id="info_nojre"/>
       </td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Without_JRE.zip/download" role="button">Download</a></td>
@@ -227,14 +227,14 @@ prefer the Latest version.</p>
   </tr>
 
  <tr id="latest_windows_jre64b">
-      <td class="version-name">Windows with 64-bit JRE</td>
-      <td><span rel="popover" data-platform="windows_jre64b" data-title="Windows with 64-bit JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
+      <td class="version-name">Windows avec JRE 64 bits</td>
+      <td><span rel="popover" data-platform="windows_jre64b" data-title="Windows avec JRE 64 bits" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Windows_64.exe/download" role="button">Download</a></td>
   </tr>
 
  <tr id="latest_windows_nojre">
-      <td class="version-name">Windows without JRE</td>
-      <td><span rel="popover" data-platform="windows_nojre" data-title="Windows without JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
+      <td class="version-name">Windows sans JRE</td>
+      <td><span rel="popover" data-platform="windows_nojre" data-title="Windows sans JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Windows_without_JRE.exe/download" role="button">Download</a></td>
   </tr>
 
@@ -251,14 +251,14 @@ prefer the Latest version.</p>
   </tr>
 
  <tr id="latest_linux_jre64b">
-      <td class="version-name">Linux with 64-bit JRE</td>
-      <td><span rel="popover" data-platform="linux_jre64b" data-title="Linux with 64-bit JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
+      <td class="version-name">Linux avec JRE 64 bits</td>
+      <td><span rel="popover" data-platform="linux_jre64b" data-title="Linux avec JRE 64 bits" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Linux_64.tar.bz2/download" role="button">Download</a></td>
   </tr>
 
  <tr id="latest_linux_nojre">
-      <td class="version-name">Cross-platform without JRE</td>
-      <td><span rel="popover" data-platform="nojre" data-title="Cross-platform without JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
+      <td class="version-name">Cross-platform sans JRE</td>
+      <td><span rel="popover" data-platform="nojre" data-title="Cross-platform sans JRE" data-content="" class="glyphicon glyphicon-info-sign"><!----></span></td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Without_JRE.zip/download" role="button">Download</a></td>
   </tr>
 
@@ -414,12 +414,23 @@ space on your hard drive. In this case, do not select the Default version; selec
           </li>
         </ul>
       </div>
-      <div class="col-sm-8"><!-- padding --></div>
+      <div class="col-sm-2 footer-column">
+        <h4>Documentation</h4>
+        <ul>
+          <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
+          <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
+          <li><a href="howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
+          <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Articles</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
+              <div class="col-sm-2 footer-column"><!-- --></div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
         <ul>
           <li>
-          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact</a>
+          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact et Assistance</a>
           </li>
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
