--- a/fr/ex_doc.html
+++ b/fr/ex_doc.html
@@ -349,12 +349,23 @@
           </li>
         </ul>
       </div>
-      <div class="col-sm-8"><!-- padding --></div>
+      <div class="col-sm-2 footer-column">
+        <h4>Documentation</h4>
+        <ul>
+          <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
+          <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
+          <li><a href="howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
+          <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Articles</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
+              <div class="col-sm-2 footer-column"><!-- --></div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
         <ul>
           <li>
-          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact</a>
+          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact et Assistance</a>
           </li>
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
