--- a/download.html
+++ b/download.html
@@ -227,6 +227,7 @@ href="#download-wizard" data-toggle="collapse">Download selector</a>.</p>
   </div>
 </div>
 
+<a name="downloads"></a>
 <h3 id="standard">Standard Version - 3.6.0 update 5</h3>
 
 <p>The Standard version has usually been in use for some time and is therefore
@@ -541,12 +542,23 @@ space on your hard drive. In this case, do not select the Default version; selec
           </li>
         </ul>
       </div>
-      <div class="col-sm-8"><!-- padding --></div>
+      <div class="col-sm-2 footer-column">
+        <h4>Documentation</h4>
+        <ul>
+          <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
+          <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
+          <li><a href="howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
+          <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Reviews</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
+              <div class="col-sm-2 footer-column"><!-- --></div>
+      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>The OmegaT Project</h4>
         <ul>
           <li>
-          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact</a>
+          <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact and Support</a>
           </li>
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> About</a>
