--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@ as the main point of contact between users and the project team.</p>
   <br/>
   <h3>Mailing lists</h3>
   <p>OmegaT also has the following mailing lists and trackers, which are hosted on Sourceforge:</p>
-  <table>
+  <table class="table">
     <tbody>
       <tr>
         <td>
@@ -125,7 +125,7 @@ as the main point of contact between users and the project team.</p>
 Sourceforge by the following tracking systems. Please do not use these
 tracking systems before first raising the issue on the user group
 and/or mailing lists.</p>
-  <table>
+  <table class="table">
     <tbody>
       <tr>
         <td>
@@ -165,7 +165,7 @@ and/or mailing lists.</p>
             <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
+            <a href="https://github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
             <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
@@ -179,9 +179,9 @@ and/or mailing lists.</p>
         <h4>Documentation</h4>
         <div class="header-line"><!----></div>
         <ul>
-          <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-          <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-          <li><a href="howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
+          <li><a href="documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
+          <li><a href="documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
+          <li><a href="documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
           <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Reviews</a></li>
         </ul>
       </div>
