--- a/ex_doc.html
+++ b/ex_doc.html
@@ -339,7 +339,7 @@
             <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
+            <a href="https://github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
             <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
@@ -353,9 +353,9 @@
         <h4>Documentation</h4>
         <div class="header-line"><!----></div>
         <ul>
-          <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-          <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-          <li><a href="howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
+          <li><a href="documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
+          <li><a href="documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
+          <li><a href="documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
           <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Reviews</a></li>
         </ul>
       </div>
