--- a/fr/download.html
+++ b/fr/download.html
@@ -404,7 +404,7 @@ space on your hard drive. In this case, do not select the Default version; selec
             <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
+            <a href="https://github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
             <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
@@ -418,9 +418,9 @@ space on your hard drive. In this case, do not select the Default version; selec
         <h4>Documentation</h4>
         <div class="header-line"><!----></div>
         <ul>
-          <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
-          <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
-          <li><a href="howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
+          <li><a href="documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
+          <li><a href="documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
+          <li><a href="documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
           <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Articles</a></li>
         </ul>
       </div>
