--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ translation", and you will have to look elsewhere for it.)</p>
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="https://randomuser.me/api/portraits/men/47.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="/omegat-website/img/quote1.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>OmegaT is really awesome, I cannot translate anything without it!</p>
@@ -286,7 +286,7 @@ translation", and you will have to look elsewhere for it.)</p>
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="https://randomuser.me/api/portraits/women/11.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
@@ -300,7 +300,7 @@ translation", and you will have to look elsewhere for it.)</p>
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="https://randomuser.me/api/portraits/women/35.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="/omegat-website/img/quote3.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor.</p>
