Fix HTML errors in header/footer, index and download page

--- a/fr/download.html
+++ b/fr/download.html
@@ -35,9 +35,9 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"/>
-        <span class="icon-bar"/>
-        <span class="icon-bar"/>
+        <span class="icon-bar"><!----></span>
+        <span class="icon-bar"><!----></span>
+        <span class="icon-bar"><!----></span>
       </button>
       <a class="navbar-brand" href="/omegat-website/fr/">
         <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
@@ -55,7 +55,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-            Langues<span class="caret"/> <span class="sr-only">(current)</span>
+              Langues<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -204,7 +204,9 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
 <p>Les fichiers au format Microsoft Office XML peuvent être traduits directement dans OmegaT. Par contre, les fichiers créés dans un format MS Word, Excel ou Powerpoint plus ancien doivent être convertis dans les formats correspondants d&#39;OpenOffice.org, Apache OpenOffice ou LibreOffice (suites bureautiques libres et gratuites). Vous pouvez obtenir Apache OpenOffice ou LibreOffice à partir de la page « Logiciels tiers » accessible via le menu sur la gauche de l&#39;écran.</p>
 
 <h4>Profil utilisateur</h4>
-<p>Bien que l&#39;installation et l&#39;utilisation d&#39;OmegaT ne présentent pas de difficulté particulière, il est vivement recommandé de prendre connaissance de la documentation fournie et de suivre les instructions indiquées. Si, d&#39;une manière générale, vous avez une certaine aversion pour la lecture d&#39;instructions et que vous avez tendance à découvrir un logiciel en cliquant partout dans l&#39;attente que quelque chose ressemblant à l&#39;effet recherché se produise, alors OmegaT n&#39;est probablement pas le bon outil pour vous.</p><a name="downloads"></a><h3 id="standard">Version standard - 3.6.0 update 5</h3>
+<p>Bien que l&#39;installation et l&#39;utilisation d&#39;OmegaT ne présentent pas de difficulté particulière, il est vivement recommandé de prendre connaissance de la documentation fournie et de suivre les instructions indiquées. Si, d&#39;une manière générale, vous avez une certaine aversion pour la lecture d&#39;instructions et que vous avez tendance à découvrir un logiciel en cliquant partout dans l&#39;attente que quelque chose ressemblant à l&#39;effet recherché se produise, alors OmegaT n&#39;est probablement pas le bon outil pour vous.</p>
+
+<h3 id="downloads">Version standard - 3.6.0 update 5</h3>
 
 <p>La version standard est la version normalement utilisée ; elle se distingue par sa fiabilité. La documentation qui l&#39;accompagne est relativement à jour, du moins en ce qui concerne la documentation en anglais. Elle n&#39;intègre cependant pas toutes les fonctionnalités de la version « récente ».</p>
 
@@ -219,39 +221,39 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   <tbody><tr id="standard_windows_jre">
       <td class="version-name">Windows avec JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Windows.exe/download" role="button">Télécharger </a></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Windows.exe/download" role="button">Télécharger </a></td>
   </tr><tr id="standard_windows_nojre">
       <td class="version-name">Windows sans JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Windows_without_JRE.exe/download" role="button">Télécharger </a></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Windows_without_JRE.exe/download" role="button">Télécharger </a></td>
   </tr><tr id="standard_osx_signed">
       <td class="version-name">OS X Signé</td>
-      <td> <span rel="popover" data-platform="osx_signed" data-title="OS X Signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_signed"/></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Mac_Signed.zip/download" role="button">Télécharger </a></td>
+      <td> <span rel="popover" data-platform="osx_signed" data-title="OS X Signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_signed"></div></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Mac_Signed.zip/download" role="button">Télécharger </a></td>
   </tr><tr id="standard_osx_unsigned">
       <td class="version-name">OS X Non signé</td>
-      <td> <span rel="popover" data-platform="osx_unsigned" data-title="OS X Non signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_unsigned"/></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Mac.zip/download" role="button">Télécharger </a></td>
+      <td> <span rel="popover" data-platform="osx_unsigned" data-title="OS X Non signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_unsigned"></div></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Mac.zip/download" role="button">Télécharger </a></td>
   </tr><tr id="standard_linux_jre">
       <td class="version-name">Linux avec JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Linux.tar.bz2/download" role="button">Télécharger </a></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Linux.tar.bz2/download" role="button">Télécharger </a></td>
   </tr><tr id="standard_linux_jre64b">
       <td class="version-name">Linux avec JRE 64 bits</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Linux_64.tar.bz2/download" role="button">Télécharger </a></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Linux_64.tar.bz2/download" role="button">Télécharger </a></td>
   </tr><tr id="standard_linux_nojre">
       <td class="version-name">Cross-platform sans JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Without_JRE.zip/download" role="button">Télécharger </a></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Without_JRE.zip/download" role="button">Télécharger </a></td>
   </tr><tr id="standard_webstart">
       <td class="version-name">Web Start</td>
-      <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_webstart"/></td>
+      <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_webstart"></div></td>
       <td><a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart/OmegaT.jnlp" role="button">Télécharger </a></td>
-  </tr><tr id="">
+  </tr><tr id="standard_source">
       <td class="version-name">Code source</td>
-      <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_source"/></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_3.6.0_05_Source.zip/download" role="button">Télécharger </a></td>
+      <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_source"></div></td>
+      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Source.zip/download" role="button">Télécharger </a></td>
   </tr></tbody>
 
 </table>
@@ -300,7 +302,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
       <td><a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart-dev/OmegaT.jnlp" role="button">Télécharger </a></td>
-  </tr><tr id="">
+  </tr><tr id="latest_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
       <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Source.zip/download" role="button">Télécharger </a></td>
@@ -360,7 +362,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
 </div>
 
 <div id="popover_content_osx_unsigned" style="display:none">
-<h4 id="about_signing">Signé / Non signé</h4>
+<h4 id="about_signing_unsigned">Signé / Non signé</h4>
 
 <p>Mac OS X dispose d&#39;une fonctionnalité appelée « Gatekeeper » qui renforce la sécurité en contraignant l&#39;exécution de programmes non signés. OmegaT pour Mac OS X est disponible en version signée et non signée ; elles sont fonctionnellement identiques, mais la version signée est préférée car elle est reconnue par le système comme étant publiée par un développeur connu.</p>
 
@@ -399,7 +401,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
 
     <footer class="container-fluid text-center">
   <a href="#page" title="To Top">
-    <span class="glyphicon glyphicon-chevron-up"/>
+    <span class="glyphicon glyphicon-chevron-up"><!----></span>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
@@ -407,16 +409,16 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
         <div class="header-line"><!----></div>
         <ul>
           <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
+            <a href="https://sourceforge.net/projects/omegat/"><img alt="Sourceforge" src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="https://github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
+            <a href="https://github.com/omegat-org/"><img alt="Github" src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
+            <a href="https://twitter.com/OmegaTOfficial"><img alt="Twitter" src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img alt="Facebook" src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
           </li>
         </ul>
       </div>
