--- a/howtos/ms_translator.html
+++ b/howtos/ms_translator.html
@@ -35,9 +35,9 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"/>
-        <span class="icon-bar"/>
-        <span class="icon-bar"/>
+        <span class="icon-bar"><!----></span>
+        <span class="icon-bar"><!----></span>
+        <span class="icon-bar"><!----></span>
       </button>
       <a class="navbar-brand" href="/omegat-website/">
         <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
@@ -55,7 +55,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-            Languages<span class="caret"/> <span class="sr-only">(current)</span>
+              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -237,7 +237,7 @@ Copyright Will Helton and OmegaT Japanese Localization Team 2012-2015<br />
 
     <footer class="container-fluid text-center">
   <a href="#page" title="To Top">
-    <span class="glyphicon glyphicon-chevron-up"/>
+    <span class="glyphicon glyphicon-chevron-up"><!----></span>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
@@ -245,16 +245,16 @@ Copyright Will Helton and OmegaT Japanese Localization Team 2012-2015<br />
         <div class="header-line"><!----></div>
         <ul>
           <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
+            <a href="https://sourceforge.net/projects/omegat/"><img alt="Sourceforge" src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="https://github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
+            <a href="https://github.com/omegat-org/"><img alt="Github" src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
+            <a href="https://twitter.com/OmegaTOfficial"><img alt="Twitter" src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img alt="Facebook" src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
           </li>
         </ul>
       </div>
