--- a/fr/index.html
+++ b/fr/index.html
@@ -35,9 +35,9 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"/>
-        <span class="icon-bar"/>
-        <span class="icon-bar"/>
+        <span class="icon-bar"><!----></span>
+        <span class="icon-bar"><!----></span>
+        <span class="icon-bar"><!----></span>
       </button>
       <a class="navbar-brand" href="/omegat-website/fr/">
         <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
@@ -55,7 +55,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-            Langues<span class="caret"/> <span class="sr-only">(current)</span>
+              Langues<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -142,7 +142,7 @@
         <div class="modal-header"><button type="button" class="close close-yt" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">×</span> </button><h4 class="modal-title">Démarrez avec OmegaT</h4>
         </div>
         <div class="modal-body">
-          <div class="embed-responsive embed-responsive-16by9"><iframe class="ytvideo embed-responsive-item" src="//www.youtube.com/embed/WMXr6aJTpcU?rel=0" allowfullscreen=""><!----></iframe></div>
+          <div class="embed-responsive embed-responsive-16by9"><iframe class="ytvideo embed-responsive-item" src="//www.youtube.com/embed/WMXr6aJTpcU?rel=0" allowfullscreen=""></iframe></div>
           <p class="text-center">Vidéo de <a href="https://www.youtube.com/channel/UC2EFKLWWI4gh9BGpMf0-_5g">CATguruEN</a> (Dominique Pivard)</p>
         </div>
         <div class="modal-footer"><button type="button" class="btn btn-default close-yt" data-dismiss="modal">Fermer </button></div>
@@ -187,7 +187,7 @@
         </ul>
       </div>
     </div>
-    <div class="row im-centered"><img src="/omegat-website/img/screenshots/main_window_fr.png" class="img-responsive"/></div>
+    <div class="row im-centered"><img alt="OmegaT Screenshot" src="/omegat-website/img/screenshots/main_window_fr.png" class="img-responsive"/></div>
   </div>
   <div class="container-fluid section" id="page-download">
     <div class="row"> </div>
@@ -250,7 +250,7 @@
           <div class="item active">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote1.jpg" style="width: 100px;height:100px;"></div>
+                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote1.jpg" style="width: 100px;height:100px;" alt="User portrait"></div>
                 <div class="col-sm-9">
                   <p>OmegaT est vraiment génial, je ne peux rien traduire sans ça !</p><small>John R. - Traducteur DE> EN </small></div>
               </div>
@@ -260,7 +260,7 @@
           <div class="item">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;"></div>
+                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;" alt="User portrait"></div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p><small>Olga Z. - Traductrice EN > RU</small></div>
               </div>
@@ -270,7 +270,7 @@
           <div class="item">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote3.jpg" style="width: 100px;height:100px;"></div>
+                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote3.jpg" style="width: 100px;height:100px;" alt="User portrait"></div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor.</p><small>Audrey R. - Traductrice JA > ES</small></div>
               </div>
@@ -286,7 +286,7 @@
       </div>                          
     </div>
   </div>
-  </div>
+
   <div class="container-fluid section" id="page-omegat-and-you">
     <h2>Le projet OmegaT et vous</h2>
     <div class="header-line"><!----></div>
@@ -333,7 +333,7 @@
 
     <footer class="container-fluid text-center">
   <a href="#page" title="To Top">
-    <span class="glyphicon glyphicon-chevron-up"/>
+    <span class="glyphicon glyphicon-chevron-up"><!----></span>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
@@ -341,16 +341,16 @@
         <div class="header-line"><!----></div>
         <ul>
           <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
+            <a href="https://sourceforge.net/projects/omegat/"><img alt="Sourceforge" src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="https://github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
+            <a href="https://github.com/omegat-org/"><img alt="Github" src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
+            <a href="https://twitter.com/OmegaTOfficial"><img alt="Twitter" src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img alt="Facebook" src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
           </li>
         </ul>
       </div>
